<resources>
    <string name="app_name">Love Tarot</string>

    <string name="intro">Hãy thư giãn và rút lá bài</string>
    <string name="hihi">Cố gắng đạt điểm cao nhé !</string>


    <string name="action_settings">Cài đặt</string>
    <string name="hello_world">Hello world!</string>
    <string name="draw_a_card">Rút một lá bài</string>
    <string name="cardspread">Trải bài</string>
    <string name="encyclopedia">Sổ tay</string>
    <string name="galaxy_profile">Cài đặt</string>
    <string name="encyclopedia_settings">Cài đặt Bách khoa thư</string>
    <string name="feedback_connect">Phản hồi</string>
    <string name="more_app">More Apps</string>
    <string name="sources_and_credits">Sources and Credits</string>
    <string name="browse_cards">Duyệt bài</string>
    <string name="profile">Hỗ Trợ</string>
    <string name="tarot_spread">Trải bài Tarot</string>
    <string name="three_card">Three Cards</string>
    <string name="profile_theme">Kiểu cách</string>
    <string name="profile_settings">Cài đặt ứng dụng</string>
    <string name="celtic_cross">Celtic Cross</string>
    <string name="relationship_spread_1">Relationship Spread 1</string>
    <string name="btn_shuffle_cards">Xáo bài</string>
    <string name="btn_go_directly_to_spread">Trải bài ngay</string>
    <string name="three_card_guide">Cách trải bài Tarot này gồm ba lá, được sử dụng để xét đoán về tình trạng của bản thân trên các mặt Cơ thể, Trí óc, Tinh thần</string>
    <string name="celtic_cross_guide">Trải bài Celtic Cross là một trong những trải bài được sử dụng phổ biến nhất, nhưng cũng là một trong những trải bài phức tạp để giải nghĩa. Nó đưa ra cái nhìn khái quát về bản thân của người hỏi.</string>
    <string name="relationship_spread_1_guide">Không có dữ liệu mô tả về Relationship Spread ???</string>
    <string name="keywords">Nghĩa xuôi</string>
    <string name="reverse_keywords">Nghĩa ngược</string>
    <string name="interpretations">Giải thích</string>
    <string name="reverse_interpretations">Giải thích ngược</string>
    <string name="btn_view_card_interpretation">Giải thích lá bài</string>
    <string name="btn_view_card_associations">Sự kết hợp</string>

    <string name="dao_nguoc_bai">Đảo ngược bài</string>
    <string name="am_thanh">Âm thanh</string>
    <string name="font_size">Kích cỡ Font chữ</string>
    <string name="card_back">Card Back</string>
    <string name="back_ground">Background</string>


    <string name="section_of_Major_Arcana">Major Arcana</string>
    <string name="section_of_Suit_of_Wands">Suit of Wands</string>
    <string name="section_of_Suit_of_Cups">Suit of Cups</string>
    <string name="section_of_Suit_of_Swords">Suit of Swords</string>
    <string name="section_of_Suit_of_Pentacles">Suit of Pentacles</string>

    <string name="huy_trai_bai">Bạn có chắc muốn hủy lần trải bài này không ?</string>
    <string name="huy_cai_dat">Bạn có chắc muốn cài lại mặc định không ?</string>
    <string name="huy_thay_doi">Bạn có chắc chắn muốn lưu lại thay đổi ?</string>
    <string name="xac_nhan_thay_doi">Đã hủy tất cả thay đổi của bạn.</string>
    <string name="not_save">Chưa lưu thay đổi !</string>
    <string name="you_mean">Bạn có muốn lưu lại thay đổi cài đặt không ?</string>
    <string name="you_mean_1">Chưa lưu thay đổi !\nBạn có muốn lưu lại thay đổi cài đặt không ?</string>
    <string name="OK">OK</string>
    <string name="str_gioi_thieu_ve_tarot">Giới thiệu về Tarot</string>
    <string name="str_thanh_tay">Thanh tẩy bài</string>
    <string name="str_danh_gia">Đánh giá</string>
    <string name="str_chia_se">Chia sẻ</string>
    <string name="str_ung_dung_khac">Ứng dụng khác:</string>
    <string name="str_tarot_va_cung_hoang_dao">Tarot và Cung hoàng đạo</string>
    <string name="str_y_nghia_nhung_la_bai">Ý nghĩa những lá bài</string>
    <string name="str_gop_y">Góp ý</string>
    <string name="str_thong_tin">Thông tin</string>
    <string name="str_kien_thuc">Kiến thức</string>
    <string name="str_cung_hoang_dao_va_da_thanh_tay">Cung hoàng đạo và đá thanh tẩy</string>
    <string name="str_itachi">Luân xa (Chakar)</string>
    <string name="str_quiz">Trắc nghiệm vui</string>

    <string name="str_all_atonne">Các loại đá thanh tẩy</string>
    <string name="str_cai_dat">Cài đặt</string>
    <string name="str_trang_chu">Trang chủ</string>
    <string name="str_mean">Bạn muốn khám phá ý nghĩa những lá bài ?
        Còn chần chừ gì nữa.</string>
    <string name="str_cung_hoang_dao">Bạn là cung hoàng đạo gì ?
        Hãy cùng nhau tìm hiểu nhé !</string>
    <string name="str_click">Hãy nhấp vào đây !!!</string>
    <string name="da_thanh_tay">Các loại đá thanh tẩy</string>
    <string name="best">Love you so much !!!</string>
    <string name="cute">You are so cute !!!</string>
    <string name="proud">Proud of you !!!</string>
    <string name="bo_qua">Bỏ qua</string>
    <string name="home">Home</string>
    <string name="str_cardback">Bạn đã chọn ảnh này làm ảnh nền cho CardBack !</string>

    <string name="google_app_id_ad_test">ca-app-pub-8778169562156997~2786289091</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-8778169562156997/3600677313</string>
    <string name="interstitial_ad_unit_test">ca-app-pub-8778169562156997/9974513979</string>

    <string name="btn_start_quiz">Bắt đầu</string>
    <string name="tv_hight_score">Điểm cao: 0</string>
    <string name="tv_score_text">Điểm: 0</string>
    <string name="tv_question_text">Câu hỏi: 1/x</string>
    <string name="btn_confirm_text">Xác nhận</string>
    <string name="difficulty_hard">Difficulty : Hard</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select_category">Chọn thể loại</string>

<!--    <string name="google_app_id_ad_test">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="interstitial_ad_unit_test">ca-app-pub-3940256099942544/1033173712</string>-->

</resources>
