<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.MainActivityQuiz"
    android:background="@drawable/leaf_background">

    <ImageView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/fg_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/titlefont"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/hihi"
        android:textColor="#d1a554"
        android:textSize="@dimen/intro_font_size"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/am_thanh"
        android:scaleType="fitXY"
        android:src="@drawable/fg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

<!--    <TextView-->
<!--        android:id="@+id/tvTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="70dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textColor="@color/primary_text"-->
<!--        android:textSize="30sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/tvHighScore"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.manojbhadane.QButton
        android:id="@+id/btnStartQuiz"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/btn_start_quiz"
        android:textSize="17sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:qb_backgroundColor="@color/white_trans"
        app:qb_radius="100"
        app:qb_strokeColor="@color/white"
        app:qb_strokeWidth="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHighScore"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_hight_score"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toTopOf="@+id/btnStartQuiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCat" />

    <TextView
        android:id="@+id/textViewCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/select_category"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartQuiz" />

<!--    <Spinner-->
<!--        android:id="@+id/spinner_difficulty"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="22dp"-->
<!--        android:layout_marginEnd="100dp"-->
<!--        android:textAlignment="inherit"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toEndOf="@+id/textViewDiff"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />-->

<!--    <TextView-->
<!--        android:id="@+id/textViewDiff"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="60dp"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:text="@string/select_difficulty"-->
<!--        android:textColor="@color/secondary_text"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/spinner_difficulty"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textViewCat"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->
</androidx.constraintlayout.widget.ConstraintLayout>