<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_padding"
        android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="+2"
        android:shadowDy="+2"
        android:shadowRadius="2"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_name_font_size"
        android:fontFamily="@font/titlefont"
        android:typeface="serif" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvAppName"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_marginBottom="@dimen/row_separator"
            android:layout_marginTop="@dimen/row_separator" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_drawcard"
                    android:layout_width="@dimen/home_button_thumbnail_size"
                    android:layout_height="@dimen/home_button_thumbnail_size"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_drawcard_1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="+2"
                    android:shadowDy="+2"
                    android:shadowRadius="2"
                    android:text="@string/draw_a_card"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commom_font_size"
                    android:fontFamily="@font/quicksand"
                    android:textStyle="normal"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_spreadcard"
                    android:layout_width="@dimen/home_button_thumbnail_size"
                    android:layout_height="@dimen/home_button_thumbnail_size"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_spreadcard_new" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="+2"
                    android:shadowDy="+2"
                    android:shadowRadius="2"
                    android:text="@string/cardspread"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commom_font_size"
                    android:fontFamily="@font/quicksand"
                    android:textStyle="normal"
                    android:typeface="serif" />
            </LinearLayout>
        </TableRow>

        <TableRow android:layout_marginBottom="@dimen/row_separator" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_encyclopedia"
                    android:layout_width="@dimen/home_button_thumbnail_size"
                    android:layout_height="@dimen/home_button_thumbnail_size"
                    android:layout_gravity="center"
                    android:background="@drawable/book_card" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="+2"
                    android:shadowDy="+2"
                    android:shadowRadius="2"
                    android:fontFamily="@font/quicksand"
                    android:text="@string/encyclopedia"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commom_font_size"
                    android:textStyle="normal"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_profile_animation"
                    android:layout_width="@dimen/home_button_thumbnail_size"
                    android:layout_height="@dimen/home_button_thumbnail_size"
                    android:layout_gravity="center"
                    android:background="@drawable/settings" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:shadowColor="@color/text_shadow"
                    android:shadowDx="+2"
                    android:shadowDy="+2"
                    android:shadowRadius="2"
                    android:text="@string/galaxy_profile"
                    android:fontFamily="@font/quicksand"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commom_font_size"
                    android:textStyle="normal"
                    android:typeface="serif" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>