<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:max="http://schemas.applovin.com/android/1.0"
    android:id="@+id/clParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBgFragment"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:background="@drawable/mainback"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetEnd="@dimen/dimen_0dp"
        app:contentInsetLeft="@dimen/dimen_0dp"
        app:contentInsetRight="@dimen/dimen_0dp"
        app:contentInsetStart="@dimen/dimen_0dp"
        app:layout_constraintLeft_toLeftOf="@dimen/dimen_0dp"
        app:layout_constraintRight_toRightOf="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="@dimen/dimen_0dp">

        <ImageView
            android:id="@+id/ivBackTb"
            android:layout_width="@dimen/dimen_50dp"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="left|center_vertical|center_horizontal|center|start"
            android:adjustViewBounds="true"
            android:layout_margin="4dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@null"
            android:padding="@dimen/dimen_9dp"
            android:scaleType="fitCenter"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvTitleTb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dimen_50dp"
            android:layout_marginRight="@dimen/dimen_50dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/str_tarot_va_cung_hoang_dao"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/commom_font_size_small"
            android:visibility="visible"
            app:fontFamily="@font/quicksand" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nvFragment"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:fillViewport="true"
        android:paddingTop="@dimen/dimen_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivThumb"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_300dp"
                android:layout_margin="4dp"
                android:background="@drawable/con_giap_11"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameMajorArcanaTypeCardPageMean"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:gravity="left|center_vertical|center_horizontal|center|start"
                android:text="@string/str_cung_hoang_dao"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:textSize="@dimen/commom_font_size_big"
                app:fontFamily="@font/quicksand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivThumb" />

            <com.manojbhadane.QButton
                android:layout_marginTop="@dimen/dimen_50dp"
                android:id="@+id/click_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="@dimen/commom_font_size_big"
                android:text="@string/str_click"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:qb_backgroundColor="@color/navigation_color"
                app:qb_radius="100"
                app:qb_strokeColor="@color/white"
                app:qb_strokeWidth="5"
                android:fontFamily="@font/quicksand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNameMajorArcanaTypeCardPageMean"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
